[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.25.0"
vulkano-shaders = "0.25.0"
vulkano-win = "0.25.0"
winit = "0.25.0"
image = "0.23.14"
simple-stopwatch = "0.1.2"
